fix table of content overflow

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -72,7 +72,7 @@
 }
 
 .toc-wrapper {
-  position: fixed;
+  position: sticky;
   top: calc(var(--ifm-navbar-height) + 1rem);
 }
 
@@ -91,5 +91,11 @@
   }
   .logo-java::before {
     display: block;
+  }
+}
+
+@media only screen and (max-width: 996px) {
+  .toc-wrapper {
+    display: none;
   }
 }
