--- a/src/sap/common-utils/DocsRating/docRating.css
+++ b/src/sap/common-utils/DocsRating/docRating.css
@@ -27,5 +27,4 @@
     padding: 16px;
     text-align: left;
     font-size: small;
-    position: fixed;
 }
